[gd_scene load_steps=3 format=3 uid="uid://cvccximongwej"]

[ext_resource type="Script" uid="uid://dfqxh4qbjksgs" path="res://gui/gui.gd" id="1_p5jaf"]
[ext_resource type="PackedScene" uid="uid://dlk011o6ucvn8" path="res://gui/mute_button.tscn" id="2_ioifv"]

[node name="GUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p5jaf")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.556863, 0.556863, 0.556863, 0.294118)

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseButton" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../MenueButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../LevelSelectButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../LevelSelectButton")
focus_previous = NodePath("../MenueButton")
theme_override_font_sizes/font_size = 64
text = "Pause"

[node name="LevelSelectButton" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../PauseButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../MenueButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../MenueButton")
focus_previous = NodePath("../PauseButton")
theme_override_font_sizes/font_size = 64
text = "Lvl"

[node name="MenueButton" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../LevelSelectButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../PauseButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../PauseButton")
focus_previous = NodePath("../LevelSelectButton")
text = "Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_bottom = 24.0
grow_horizontal = 0

[node name="ResetButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
text = "R"
flat = true
icon_alignment = 1

[node name="PauseButton" type="Button" parent="HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
text = "P"
flat = true

[node name="MuteButton" parent="HBoxContainer" instance=ExtResource("2_ioifv")]
layout_mode = 2

[connection signal="pressed" from="PauseMenu/HBoxContainer/PauseButton" to="." method="unpause"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/MenueButton" to="." method="_on_menue_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PauseButton" to="." method="pause"]
